--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   position: relative;
+  /* padding-bottom: 120px; */
 }
 .navbar {
   display: flex;
@@ -10,7 +11,13 @@ body {
   right: 0;
   left: 0;
   box-shadow: 0 0 13px 5px #00000065;
-  z-index: 1000;
+  z-index: 10000;
+}
+
+.bait {
+  margin-top: 100px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .questions {
   margin-top: 100px;
@@ -24,4 +31,30 @@ body {
 
 .warn_list {
   list-style-type: none;
+}
+
+.call__me {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 100;
+}
+
+/* .call__me {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding: 20px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+} */
+
+.benefit {
+  margin-top: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
